more on simple assignment nodes...

--- a/demos/multiple_hierarchies.ipynb
+++ b/demos/multiple_hierarchies.ipynb
@@ -28,62 +28,67 @@
     "if existing_experiment.exists():\n",
     "    experiment = pickle.load(existing_experiment.open(\"rb\"))\n",
     "else:\n",
-    "    experiment = Experiment({\n",
-    "        \"adapters\": [\n",
-    "            {\n",
-    "                \"adapter_name\": \"brightway-adapter\",\n",
-    "                \"config\": {\"bw_project\": BRIGHTWAY_ECOINVENT_391_PROJECT_NAME},\n",
-    "                \"methods\": {\n",
-    "                    \"GWP1000\": (\n",
-    "                        \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
-    "                        \"climate change\",\n",
-    "                        \"global warming potential (GWP1000)\",\n",
-    "                    )\n",
+    "    experiment = Experiment(\n",
+    "        {\n",
+    "            \"adapters\": [\n",
+    "                {\n",
+    "                    \"adapter_name\": \"brightway-adapter\",\n",
+    "                    \"config\": {\"bw_project\": BRIGHTWAY_ECOINVENT_391_PROJECT_NAME},\n",
+    "                    \"methods\": {\n",
+    "                        \"GWP1000\": (\n",
+    "                            \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "                            \"climate change\",\n",
+    "                            \"global warming potential (GWP1000)\",\n",
+    "                        )\n",
+    "                    },\n",
     "                }\n",
-    "            }\n",
-    "        ],\n",
-    "        \"hierarchy\": {\n",
-    "            \"name\": \"root\",\n",
-    "            \"aggregator\": \"sum\",\n",
-    "            \"children\": [\n",
-    "                {\n",
-    "                    \"name\": \"wind\",\n",
-    "                    \"aggregator\": \"sum\",\n",
-    "                    \"children\": [\n",
-    "                        {\n",
-    "                            \"name\": \"electricity production, wind, 1-3MW turbine, onshore\",\n",
-    "                            \"adapter\": \"bw\",\n",
-    "                            \"config\": {\n",
-    "                                \"code\": \"ed3da88fc23311ee183e9ffd376de89b\",\n",
-    "                                \"default_output\": {\"unit\": \"kilowatt_hour\", \"magnitude\": 3},\n",
-    "                            },\n",
-    "                        },\n",
-    "                        {\n",
-    "                            \"name\": \"electricity production, wind, 1-3MW turbine, offshore\",\n",
-    "                            \"adapter\": \"bw\",\n",
-    "                            \"config\": {\"code\": \"6ebfe52dc3ef5b4d35bb603b03559023\"},\n",
-    "                        },\n",
-    "                    ],\n",
-    "                },\n",
-    "                {\n",
-    "                    \"name\": \"solar\",\n",
-    "                    \"aggregator\": \"sum\",\n",
-    "                    \"children\": [\n",
-    "                        {\n",
-    "                            \"name\": \"electricity production, solar tower power plant, 20 MW\",\n",
-    "                            \"adapter\": \"bw\",\n",
-    "                            \"config\": {\"code\": \"f2700b2ffcb6b32143a6f95d9cca1721\"},\n",
-    "                        },\n",
-    "                        {\n",
-    "                            \"name\": \"electricity production, solar thermal parabolic trough, 50 MW\",\n",
-    "                            \"adapter\": \"bw\",\n",
-    "                            \"config\": {\"code\": \"19040cdacdbf038e2f6ad59814f7a9ed\"},\n",
-    "                        },\n",
-    "                    ],\n",
-    "                },\n",
     "            ],\n",
+    "            \"hierarchy\": {\n",
+    "                \"name\": \"root\",\n",
+    "                \"aggregator\": \"sum\",\n",
+    "                \"children\": [\n",
+    "                    {\n",
+    "                        \"name\": \"wind\",\n",
+    "                        \"aggregator\": \"sum\",\n",
+    "                        \"children\": [\n",
+    "                            {\n",
+    "                                \"name\": \"electricity production, wind, 1-3MW turbine, onshore\",\n",
+    "                                \"adapter\": \"bw\",\n",
+    "                                \"config\": {\n",
+    "                                    \"code\": \"ed3da88fc23311ee183e9ffd376de89b\",\n",
+    "                                    \"default_output\": {\n",
+    "                                        \"unit\": \"kilowatt_hour\",\n",
+    "                                        \"magnitude\": 3,\n",
+    "                                    },\n",
+    "                                },\n",
+    "                            },\n",
+    "                            {\n",
+    "                                \"name\": \"electricity production, wind, 1-3MW turbine, offshore\",\n",
+    "                                \"adapter\": \"bw\",\n",
+    "                                \"config\": {\"code\": \"6ebfe52dc3ef5b4d35bb603b03559023\"},\n",
+    "                            },\n",
+    "                        ],\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"name\": \"solar\",\n",
+    "                        \"aggregator\": \"sum\",\n",
+    "                        \"children\": [\n",
+    "                            {\n",
+    "                                \"name\": \"electricity production, solar tower power plant, 20 MW\",\n",
+    "                                \"adapter\": \"bw\",\n",
+    "                                \"config\": {\"code\": \"f2700b2ffcb6b32143a6f95d9cca1721\"},\n",
+    "                            },\n",
+    "                            {\n",
+    "                                \"name\": \"electricity production, solar thermal parabolic trough, 50 MW\",\n",
+    "                                \"adapter\": \"bw\",\n",
+    "                                \"config\": {\"code\": \"19040cdacdbf038e2f6ad59814f7a9ed\"},\n",
+    "                            },\n",
+    "                        ],\n",
+    "                    },\n",
+    "                ],\n",
+    "            },\n",
     "        }\n",
-    "    })\n",
+    "    )\n",
     "    experiment.run()"
    ],
    "metadata": {
@@ -217,8 +222,7 @@
     "\n",
     "# we can pass the new hierarchy to result_to_dict, for the whole experiment (all scenarios in a list)\n",
     "rearranged_result_tree = experiment.result_to_dict(\n",
-    "    include_output=False,\n",
-    "    alternative_hierarchy=alt_hierarchy\n",
+    "    include_output=False, alternative_hierarchy=alt_hierarchy\n",
     ")\n",
     "\n",
     "print(json.dumps(rearranged_result_tree, indent=2))"
