--- a/demos/assignment_adapter_demo.ipynb
+++ b/demos/assignment_adapter_demo.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Simple Assignment (Adapter) Demo\n",
-    "In this we look at another builtin adapter, the Simple Assignment Adapter `enbios/base/adapters_aggregators/builtin/simple_assignment_adapter.py`. This adapter does not any specific calculations. Instead, it allows the user to introduce fixed values, that should come from some external source into the enbios tree calculation. This includes not just the outputs of structural nodes, but in particular their impact results.\n",
+    "# Assignment-Adapter Demo\n",
+    "In this we look at another builtin adapter, the Simple Assignment Adapter `enbios/base/adapters_aggregators/builtin/assignment_adapter.py`. This adapter does not any specific calculations. Instead, it allows the user to introduce fixed values, that should come from some external source into the enbios tree calculation. This includes not just the outputs of structural nodes, but in particular their impact results.\n",
     "\n",
     "These values can be either in the experiment configuration file or for convenience in a referenced csv file. The values can be specified in such a way, that scenario outputs and result values have consistent and valid units.\n",
     "\n",
     "In addition, compared to the brightway adapter, this adapter allows to specify _multiple outputs_ for each node, and also nodes that do not specify any output, even tho they have some impacts. \n",
     "\n",
-    "The adapters dedicated name is `simple-assignment-adapter` tho for nodes, the indicator `assign` can also be used."
+    "The adapters dedicated name is `assignment-adapter` tho for nodes, the indicator `assign` can also be used."
    ],
    "metadata": {
     "collapsed": false
@@ -31,7 +31,7 @@
    "cell_type": "code",
    "source": [
     "from enbios import Experiment\n",
-    "from enbios.base.adapters_aggregators.builtin import SimpleAssignmentAdapter\n",
+    "from enbios.base.adapters_aggregators.builtin.assignment_adapter import AssignmentAdapter\n",
     "\n",
     "# let's keep this node separate, so we can manipulate it easier later\n",
     "simple_assignment_node = {\n",
@@ -48,7 +48,7 @@
     "experiment_data = {\n",
     "    \"adapters\": [\n",
     "        {\n",
-    "            \"adapter_name\": \"simple-assignment-adapter\",\n",
+    "            \"adapter_name\": \"assignment-adapter\",\n",
     "            # by default this adapter does no specific config\n",
     "            \"methods\": {\"co2\": \"kg\"},\n",
     "        }\n",
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T08:48:48.204991Z",
-     "start_time": "2024-04-10T08:48:46.332626Z"
+     "end_time": "2024-04-10T09:30:06.979729Z",
+     "start_time": "2024-04-10T09:30:05.385911Z"
     }
    },
    "id": "51882535d23f9aaf",
@@ -80,8 +80,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T08:48:48.220661Z",
-     "start_time": "2024-04-10T08:48:48.206235Z"
+     "end_time": "2024-04-10T09:30:06.995338Z",
+     "start_time": "2024-04-10T09:30:06.981077Z"
     }
    },
    "id": "ea56828e7a2bd3b0",
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-10 10:48:48,215 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
+      "2024-04-10 11:30:06,989 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
     },
     {
@@ -113,12 +113,22 @@
   },
   {
    "metadata": {},
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "source": [
     "The config of an assign node is structured the following way:\n",
-    "Since the assignment nodes"
+    "These are the fields that can/must be set:\n",
+    "```\n",
+    "    node_name: a unique string\n",
+    "    outputs: a list that specifies the outputs\n",
+    "    default_outputs: a list of default-outputs (optional) \n",
+    "    default_impacts: a dictionary of default impacts\n",
+    "```\n",
+    "\n",
+    "In detail:\n",
+    "\n",
+    "\n"
    ],
-   "id": "53e15d1e37149c8b"
+   "id": "54383fc16a265102"
   },
   {
    "cell_type": "code",
@@ -207,7 +217,7 @@
     }
    },
    "cell_type": "code",
-   "source": "SimpleAssignmentAdapter.get_config_schemas()",
+   "source": "AssignmentAdapter.get_config_schemas()",
    "id": "a272470829d8fa95",
    "outputs": [
     {
