more on assignment_adapter.py and its demo

--- a/demos/assignment_adapter_demo.ipynb
+++ b/demos/assignment_adapter_demo.ipynb
@@ -31,15 +31,12 @@
    "cell_type": "code",
    "source": [
     "from enbios import Experiment\n",
-    "from enbios.base.adapters_aggregators.builtin.assignment_adapter import AssignmentAdapter\n",
     "\n",
-    "# let's keep this node separate, so we can manipulate it easier later\n",
     "simple_assignment_node = {\n",
     "    \"name\": \"simple_node\",\n",
     "    \"adapter\": \"assign\",\n",
-    "    # the config of an assign node needs either: default_impacts or scenario_data.impacts\n",
     "    \"config\": {\n",
-    "        \"outputs\": [{\"unit\":\"l\"}],\n",
+    "        \"outputs\": [{\"unit\": \"l\"}],\n",
     "        \"default_outputs\": [{\"magnitude\": 4}],\n",
     "        \"default_impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 10}},\n",
     "    },\n",
@@ -49,7 +46,7 @@
     "    \"adapters\": [\n",
     "        {\n",
     "            \"adapter_name\": \"assignment-adapter\",\n",
-    "            # by default this adapter does no specific config\n",
+    "            # by default this adapter needs no specific config\n",
     "            \"methods\": {\"co2\": \"kg\"},\n",
     "        }\n",
     "    ],\n",
@@ -58,39 +55,25 @@
     "        \"aggregator\": \"sum\",\n",
     "        \"children\": [simple_assignment_node],\n",
     "    },\n",
-    "}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-10T09:30:06.979729Z",
-     "start_time": "2024-04-10T09:30:05.385911Z"
-    }
-   },
-   "id": "51882535d23f9aaf",
-   "outputs": [],
-   "execution_count": 1
-  },
-  {
-   "cell_type": "code",
-   "source": [
+    "}\n",
+    "\n",
     "experiment = Experiment(experiment_data)\n",
     "experiment.run()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-10T09:30:06.995338Z",
-     "start_time": "2024-04-10T09:30:06.981077Z"
+     "end_time": "2024-04-10T12:51:55.814340Z",
+     "start_time": "2024-04-10T12:51:54.121515Z"
     }
    },
-   "id": "ea56828e7a2bd3b0",
+   "id": "51882535d23f9aaf",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-10 11:30:06,989 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
+      "2024-04-10 14:51:55,808 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
     },
     {
@@ -104,12 +87,12 @@
        "    'output': [{'unit': 'l', 'magnitude': 4.0}]}]}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -125,10 +108,97 @@
     "```\n",
     "\n",
     "In detail:\n",
+    "__outputs:__ each output in that list contains the fields: `unit` and `label` (optional). The unit specifies the unit for that output. When default or scenario outputs do not specify any unit, this one will be used, and if they do, it must be compatible with this unit, e.g. W, kW, MW, TW, ...\n",
     "\n",
-    "\n"
+    "The label is used in order to indicate if nodes outputs should be merged  or not(by the sum-aggregator). By default, outputs that do not have any label get merged, when their units are compatible with each other. If outputs have labels, they will only be merged with other nodes outputs, when they have the same label. Further down, we will see this in an example.\n",
+    "\n",
+    "__default_outputs:__ Default outputs are used in scenarios, when there is no output specified. A default output (one item in the list) can also be `None` (`null` in json), meaning an output always needs to be defined. The unit can be omited, in that case the normal output unit will be used (defined in `outputs`).\n",
+    "\n",
+    "__default_impacts:__ The default impacts, which will be used, when some impact is not specified in a scenario, is a dictionary that maps from a method (as specified in the config of the adapter) to a value (`unit` and `magnitude`)\n"
    ],
    "id": "54383fc16a265102"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "In this example, we see how a node can be specified, when there are scenarios, which define specific outputsw and impacts. The two fields for a node in a scenario are `outputs` and `impacts` and the structure is the same as for default values.",
+   "id": "17399b27ccb0a7e1"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-10T12:51:57.250545Z",
+     "start_time": "2024-04-10T12:51:57.217132Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from enbios import Experiment\n",
+    "from enbios.base.adapters_aggregators.builtin.assignment_adapter import AssignmentAdapter\n",
+    "\n",
+    "simple_assignment_node = {\n",
+    "    \"name\": \"simple_node\",\n",
+    "    \"adapter\": \"assign\",\n",
+    "    \"config\": {\n",
+    "        \"outputs\": [{\"unit\": \"l\"}]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "experiment_data = {\n",
+    "    \"adapters\": [\n",
+    "        {\n",
+    "            \"adapter_name\": \"assignment-adapter\",\n",
+    "            # by default this adapter needs no specific config\n",
+    "            \"methods\": {\"co2\": \"kg\"},\n",
+    "        }\n",
+    "    ],\n",
+    "    \"hierarchy\": {\n",
+    "        \"name\": \"root\",\n",
+    "        \"aggregator\": \"sum\",\n",
+    "        \"children\": [simple_assignment_node],\n",
+    "    },\n",
+    "    \"scenarios\": [\n",
+    "        {\n",
+    "            \"name\": \"scenario 1\",\n",
+    "            \"nodes\": {\n",
+    "                \"simple_node\": {\n",
+    "                    \"outputs\": [{\"magnitude\": 4}],\n",
+    "                    \"impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 10}},\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "experiment = Experiment(experiment_data)\n",
+    "experiment.run()"
+   ],
+   "id": "8ef6ac22c0e5b47f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-10 14:51:57,241 - ............demos.enbios.base - INFO - Running scenario 'scenario 1'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scenario 1': {'name': 'root',\n",
+       "  'results': {'co2': {'unit': 'kg', 'magnitude': 10.0}},\n",
+       "  'output': [{'unit': 'liter', 'magnitude': 4.0}],\n",
+       "  'children': [{'name': 'simple_node',\n",
+       "    'results': {'co2': {'unit': 'kg', 'magnitude': 10.0}},\n",
+       "    'output': [{'unit': 'l', 'magnitude': 4.0}]}]}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -289,11 +359,96 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Output merging with labels",
+   "id": "948d9e60b53c7357"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-10T10:16:44.387560Z",
+     "start_time": "2024-04-10T10:16:42.419456Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from enbios import Experiment\n",
+    "\n",
+    "# let's keep this node separate, so we can manipulate it easier later\n",
+    "simple_assignment_node = {\n",
+    "    \"name\": \"simple_node\",\n",
+    "    \"adapter\": \"assign\",\n",
+    "    # the config of an assign node needs either: default_impacts or scenario_data.impacts\n",
+    "    \"config\": {\n",
+    "        \"outputs\": [{\"unit\": \"l\"}, {\"unit\": \"kg\"}, {\"unit\": \"hours\"}],\n",
+    "        \"default_outputs\": [{\"magnitude\": 4}, None, {\"magnitude\": 1}],\n",
+    "        \"default_impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 10}},\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "experiment_data = {\n",
+    "    \"adapters\": [\n",
+    "        {\n",
+    "            \"adapter_name\": \"assignment-adapter\",\n",
+    "            # by default this adapter does no specific config\n",
+    "            \"methods\": {\"co2\": \"kg\"},\n",
+    "        }\n",
+    "    ],\n",
+    "    \"hierarchy\": {\n",
+    "        \"name\": \"root\",\n",
+    "        \"aggregator\": \"sum\",\n",
+    "        \"children\": [simple_assignment_node],\n",
+    "    },\n",
+    "    \"scenarios\": [\n",
+    "        {\n",
+    "            \"name\": \"scenario1\",\n",
+    "            \"nodes\": {\n",
+    "                \"simple_node\": {\n",
+    "                    \"outputs\": [{\"magnitude\": 100}],\n",
+    "                    \"impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 10}}\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "experiment = Experiment(experiment_data)\n",
+    "experiment.run()"
+   ],
+   "id": "de9c99ce6191bc6f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-04-10 12:16:44,379 - ............demos.enbios.base - INFO - Running scenario 'scenario1'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scenario1': {'name': 'root',\n",
+       "  'results': {'co2': {'unit': 'kg', 'magnitude': 10.0}},\n",
+       "  'output': [{'unit': 'liter', 'magnitude': 100.0}],\n",
+       "  'children': [{'name': 'simple_node',\n",
+       "    'results': {'co2': {'unit': 'kg', 'magnitude': 10.0}},\n",
+       "    'output': [{'unit': 'l', 'magnitude': 100.0}]}]}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "83d20560c303cb3"
+   "id": "1fca6c16788787db"
   }
  ],
  "metadata": {
